--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ z-index: 100;
   margin-top: 30em;
     }
 
+
+    .navbar-fixed-top{
+      background-color: #8459f9;
+    }
 .header-text {
  margin-top: 10em;
 }
